@@ -1,15 +1,20 @@
-OUT_NAME     := ini_test
+OUT_NAME     := test_aini
 OUT_DIR      := .
 #INC_DIRS    :=
 CLEAN_FILES := "$(OUT_DIR)/$(OUT_NAME).exe"
 
 # 1-st way to select source files
-#SRC_DIRS := . 
+#SRC_DIRS := ../.. .
+#HDR_DIRS := ../..
 
 # 2-nd way to select source files
 SRCS := ../../str.c \
         ../../ini.c \
-	test_aini.cpp
+        test_aini.cpp
+
+HDRS := ../../str.h \
+        ../../ini.h \
+        ../../aini.h
 
 DEFS    := -DSTR_DEBUG -DSTR_DEF_SECTOR_SIZE="3"
 #-DINI_INLINE="static inline"
