@@ -1,15 +1,19 @@
-OUT_NAME     := ini_test
+OUT_NAME     := test_ini
 OUT_DIR      := .
 #INC_DIRS    :=
 CLEAN_FILES := "$(OUT_DIR)/$(OUT_NAME).exe"
 
 # 1-st way to select source files
-#SRC_DIRS := . 
+#SRC_DIRS := ../.. .
+#HDR_DIRS := ../..
 
 # 2-nd way to select source files
 SRCS := ../../str.c \
         ../../ini.c \
         test_ini.c
+
+HDRS := ../../str.h \
+	      ../../ini.h
 
 DEFS    := -DSTR_DEBUG -DSTR_DEF_SECTOR_SIZE="2"
 #-DINI_INLINE="static inline"
